@@ -1,0 +1,3 @@
+MD5 49b2d9acd861c29a075431e10720e703 epg-0.0.11.tar.gz 180541
+RMD160 031f3a41af619b814b393bf4dadb13c3611a44e1 epg-0.0.11.tar.gz 180541
+SHA256 97276f18b7d5448001b5963fb3285d360762a20b409bd15f8b35e3e5ba3ce7fc epg-0.0.11.tar.gz 180541
